# ProAim-Engine-V2

./: README.md  build_apk.yml  pubspec.yaml
.github/workflows/: build_apk.yml
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/proaim/engine/: MainActivity.kt  OverlayService.kt
android/app/src/main/res/drawable/: launch_background.xml
android/app/src/main/res/values/: styles.xml
lib/: main.dart
lib/native/: physics_bridge.dart
lib/services/: overlay_manager.dart
lib/ui/: dashboard.dart
native_lib/: CMakeLists.txt  physics_engine.cpp
